<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:background="@drawable/pagebkg"
    tools:context=".Login">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext"
            >
            <TextView
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="@color/Lavender"
                android:textStyle="bold"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:hint="@string/Email"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/baseline_person_24"
                android:background="@drawable/custom_edittext"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:padding="8dp"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:background="@drawable/custom_edittext"
                />
            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btn_login"
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/Lavender"
                />
            <TextView
                android:id="@+id/registerNow"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/Lavender"
                android:text="@string/register_now"
                />



        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>