<?xml version="1.0" encoding="utf-8"?>
    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pagebkg"
    android:id="@+id/drawer_layout"
    tools:context=".Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tic_tac_toe_game"
            android:textSize="30sp"
            android:textStyle="bold"

            />
        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/baseline_menu_24" />
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:backgroundTint="@color/white"
            android:padding="4dp"
            android:layout_margin="10dp"
            android:background="@drawable/custom_edittext"
            >

            <TextView
                android:id="@+id/player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/player_1_0"
                android:textSize="27sp"
                android:textColor="@color/Lavender"
                android:freezesText="true"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_2_0"
                android:layout_margin="10dp"
                android:textSize="27sp"
                android:textStyle="bold"
                android:textColor="@color/Lavender"
                android:freezesText="true"
                android:layout_below="@+id/player1"
                />
            <Button
                android:id="@+id/button_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/reset"
                android:backgroundTint="@color/Lavender"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            >

            <Button
                android:id="@+id/button_00"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/Lavender2"
                android:layout_margin="2dp"
                android:textSize="60sp"
                android:freezesText="true"
                />

            <Button
                android:id="@+id/button_01"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/Lavender2"
                android:layout_margin="2dp"
                android:textSize="60sp" />

            <Button
                android:id="@+id/button_02"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/Lavender2"
                android:layout_margin="2dp"
                android:textSize="60sp"
                android:freezesText="true"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/Lavender"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/Lavender2"
                android:layout_margin="2dp"
                android:textSize="60sp"
                android:freezesText="true"
                />

            <Button
                android:id="@+id/button_11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/Lavender2"
                android:layout_margin="2dp"
                android:textSize="60sp"
                android:freezesText="true"
                />

            <Button
                android:id="@+id/button_12"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/Lavender2"
                android:layout_margin="2dp"
                android:textSize="60sp"
                android:freezesText="true"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_20"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/Lavender2"
                android:layout_margin="2dp"
                android:textSize="60sp"
                android:freezesText="true"
                />

            <Button
                android:id="@+id/button_21"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/Lavender2"
                android:layout_margin="2dp"
                android:textSize="60sp"
                android:freezesText="true"
                />

            <Button
                android:id="@+id/button_22"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/Lavender2"
                android:layout_margin="2dp"
                android:textSize="60sp"
                android:freezesText="true"
                />

        </LinearLayout>

    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        app:itemIconTint="@color/Lavender"
        app:itemTextColor="@color/Lavender"
        android:background="@color/white"
        />

</androidx.drawerlayout.widget.DrawerLayout>